i  put colour in place of title

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+    <title>colour</title>
+</head>fjjgjgh
 <body>
 
 </body>
